[gd_scene load_steps=9 format=3 uid="uid://c62mg4h6auscy"]

[ext_resource type="PackedScene" uid="uid://cwduy3ub483fa" path="res://levels/9x9 Plain.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://dhq5ffc3xaef7" path="res://levels/High Score.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b1e5f508g1vk5" path="res://levels/Hourglass.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://beecsmglw6se2" path="res://levels/4 Browns.tscn" id="5"]
[ext_resource type="Script" path="res://code/game_controller.gd" id="6"]
[ext_resource type="Script" path="res://code/level_select.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://10j6bg6i04d2" path="res://levels/Block Lower 4.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://bvfuu2yrwtuc0" path="res://levels/ui.tscn" id="9"]

[node name="main" type="Node"]
script = ExtResource("7")
level_list = Array[PackedScene]([ExtResource("1"), ExtResource("5"), ExtResource("8"), ExtResource("3")])

[node name="UI" parent="." instance=ExtResource("9")]

[node name="Game Controller" type="Node" parent="."]
script = ExtResource("6")

[node name="Game State" parent="." instance=ExtResource("2")]

[connection signal="new_level" from="." to="Game Controller" method="_on_main_new_level"]
[connection signal="reset_level" from="." to="Game Controller" method="_on_main_reset_level"]
[connection signal="next_level" from="UI" to="." method="_on_UI_next_level"]
[connection signal="place_stone" from="UI" to="Game Controller" method="_on_UI_place_stone"]
[connection signal="previous_level" from="UI" to="." method="_on_UI_previous_level"]
[connection signal="reset_level" from="UI" to="." method="_on_UI_reset_level"]
[connection signal="undo" from="UI" to="Game Controller" method="_on_UI_undo"]
[connection signal="game_state" from="Game State" to="UI" method="_on_Game_State_game_state"]
[connection signal="game_state_up" from="Game State" to="Game Controller" method="_on_Game_State_game_state_up"]
